[release] Replace source-code.wwz with src-tree.wwz
[doctools/src-tree] CSS tip from Aidan

Lets you copy source code without line numbers

--- a/web/src-tree.css
+++ b/web/src-tree.css
@@ -26,6 +26,8 @@ a:hover {
 .num {
   color: #666;
   text-align: right;
+  /* Users can copy the code without copying line numbers */
+  user-select: none;
 }
 
 .line {
