[micro-syntax] Prepare to hook up Python and C++
- Add tests to Soil
- Fix bug with std::string out_
- Change CSS classes to be 'comm' and 'spec-comment'

--- a/web/src-tree.css
+++ b/web/src-tree.css
@@ -35,13 +35,12 @@ a:hover {
   white-space: pre;
 }
 
-.comm3 {
-  /*font-style: italic;*/
+.spec-comment {
   font-weight: bold;
   color: #0047ab;  /* Cobalt */
 }
 
-.comm1 {
+.comm {
   color: #0047ab;  /* Cobalt */
 }
 /* TODO: a real color scheme, for pre-processor, etc. */
