[micro-syntax] Count lines for plain text
This is a nice, simple generalization

src-tree: Classify extensions, so we have fewer 'other'

--- a/web/src-tree.css
+++ b/web/src-tree.css
@@ -4,6 +4,7 @@
 body {
   /* Arial seems thinner than the default sans-serif font */
   font-family: Arial, sans-serif;
+  font-size: large;
   padding: 0 3em;
 }
 /* horizontal scrollbar for code, so the long lines don't make the page small */
