[micro-syntax] Recognize the C preprocessor
Introduced a Matcher<pp_mode_e> for this

And special logic in Scan() to detect the language change, similar to
here docs.

--- a/web/src-tree.css
+++ b/web/src-tree.css
@@ -87,7 +87,9 @@ a:hover {
   color: purple;
 }
 
-/* TODO: a real color scheme, for pre-processor, etc. */
+.preproc {
+  color: darkgreen;
+}
 
 table {
   border-collapse: collapse;
