[src-tree] Restore large font
On screens that aren't small

--- a/web/src-tree.css
+++ b/web/src-tree.css
@@ -23,7 +23,7 @@ body {
 
 @media screen and (min-width: 1001px) {
   body {
-    /*font-size: large;*/
+    font-size: large;
     padding: 0 3em;
   }
 }
