[web/base.css] ALL pages conditionally get font-size: large
Based on a survey, the only pages that don't have this are:

- release-{index,quality}.html - I want bigger fonts here
- changelog.html - seems fine
- benchmarks/*.html - seems fine.  Some tables might get too wide.
- spec-cpp index.html - seems fine

So this should make the site look more consistent all around.  We can
edit individual pages later.

--- a/web/base.css
+++ b/web/base.css
@@ -17,6 +17,7 @@
   body {
     margin: 0 auto;
     line-height: 1.4;  /* http://bettermotherfuckingwebsite.com/ */
+    font-size: large;  /* 2024-01 - all pages deserve this */
   }
 
   .skinny { width: 30em; }  /* Most blog posts */
