--- a/web/ref-index.css
+++ b/web/ref-index.css
@@ -2,18 +2,12 @@
   body {
     font-size: large;
   }
+  body > pre {
+    margin-left: initial;
+  }
 }
 
-/* like web/toc.css */
-.toc-header {
-  background-color: oldlace;
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: 1px;
-  padding-bottom: 1px;
-}
-
-/* Not used */
+/* Not used - could we use it for chapters? */
 .custom-toc {
   background-color: oldlace;
   /*
@@ -69,15 +63,6 @@ p code, li code, h2 code, h3 code, div code {
 #sublang {
   /* Works in Chrome but not Firefox? */
   break-after: column;
-}
-
-
-/* blocks of code */
-pre {
-  /* 80 character width */
-  /*
-  width: 80ch;
-  */
 }
 
 #compact-title {
