--- a/web/toc.css
+++ b/web/toc.css
@@ -17,8 +17,6 @@ div#toc a {
   color: #666;
   font-weight: bold;
   margin-bottom: 0.2em;
-/*
-*/
 }
 
 div.toclevel1, div.toclevel2, div.toclevel3, div.toclevel4 {
@@ -31,5 +29,39 @@ div.toclevel1 {
 }
 div.toclevel2 {
   margin-left: 4em;
+  font-size: 0.9em;
+}
+
+/* Dense TOC style for doc/ref */
+
+/* The whole TOC */
+.dense-toc {
+  column-width: 12em;
+}
+
+/* Represents ONE h2 and ALL h3 children */
+.dense-toc-1 {
+  /*
+  display: inline-block;
+  display: table;
+  */
+
+  /* 
+  Treat h2 and ALL h3 children as UNBREAKABLE unit
+
+  This is an older thing that seems to work */
+  overflow: hidden;
+  /*
+  # newer thing?
+  page-break-inside: avoid;
+  */
+
+  margin-left: 2em;
+  padding-bottom: 0.5em;
+}
+
+/* One h3 child */
+.dense-toc-2 {
+  margin-left: 1em;
   font-size: 0.9em;
 }
