[test/spec] Introduce OK-2, OK-3, OK-4 assertions
With different colors

Use these assertions in spec/ble-unset, because there are many different
behaviors.  This lets us see the patterns of behavior.

Right now we're using OK, OK-2, and OK-3.

But not OK-4.

Combined with PASS, there are cases with 4 different behaviors.  It's a
bit arbitrary whether we consider any of them BUG.

--- a/web/spec-tests.css
+++ b/web/spec-tests.css
@@ -50,6 +50,9 @@ td {
 
 .pass { color: darkgreen; font-size: large; }
 .ok   { color: #660; font-size: large; }
+.ok-2 { color: brown; font-size: large; }
+.ok-3 { color: darkcyan; font-size: large; }
+.ok-4 { color: gray; font-size: large; }
 .n-i  { color: #660; font-size: large; }
 .bug  { color: #660; font-size: large; }
 .fail { color: darkred; font-size: large; }
